# replicator_b

./: .gitignore  CLAUDE.md  CODE_QUALITY_AUDIT.md  CONTRIBUTING.md  DYNAMIC_SUBSYSTEMS_PLAN.md  IMPROVEMENTS.md  IMPROVEMENTS_COMPLETED.md  IMPROVEMENTS_SUMMARY.md  MIGRATION_GUIDE.md  README.md  SPEC_FORMAT.md  analyze_factory_sim.py  config_validation.py  custom_subsystems.py  dynamic_subsystems.py  exceptions.py  factory_builder.py  modular_factory_adapter.py  modular_framework.py  mypy.ini  performance_utils.py  pyproject.toml  pytest.ini  requirements.txt  run_simulation.sh  self_replicating_factory_sim.py  spec_loader.py  test_minimal.json  visualize_factory_system.py
.github/: dependabot.yml
.github/workflows/: docs.yml  test.yml
configs/: modular_base.json
specs/: default.spec  default_recipes.yaml  energy_focused.json  genetic_optimized.json  high_reliability.json  minimal.json  minimal.spec
tests/: __init__.py  conftest.py
tests/integration/: test_factory_builder_integration.py
tests/unit/: test_circular_dependency.py  test_exceptions.py  test_modular_framework_basic.py  test_performance_utils.py  test_spec_loader.py
